[gd_scene load_steps=4 format=3 uid="uid://dwtu6a0ypc6ic"]

[ext_resource type="Script" uid="uid://c4xqqaxvj0iux" path="res://scripts/ui/LevelDisplay.gd" id="1_50fbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a4p5t"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s61ka"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="LevelDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_50fbd")

[node name="LevelBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a4p5t")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RequiredScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 50.0
offset_right = 60.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Complete 3/5"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.98
offset_top = 14.005
offset_right = -52.98
offset_bottom = 48.005
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "5:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -138.0
offset_top = 13.0
offset_right = -18.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_s61ka")
